<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="@dimen/title_top_margin"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_start_margin"
        android:layout_marginTop="@dimen/input_first_box_top_margin"
        android:layout_marginEnd="@dimen/input_end_margin"
        android:hint="@string/username_email"
        android:layoutMode="opticalBounds"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/colorVeryLightGray"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_sign_in"
        app:startIconDrawable="@drawable/ic_round_person_outline_24"
        app:startIconTint="@color/colorVeryLightGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="25"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_box_top_margin"
        android:hint="@string/password"
        android:layoutMode="opticalBounds"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/colorVeryLightGray"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutUsername"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutUsername"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorVeryLightGray"
        app:startIconDrawable="@drawable/ic_outline_lock_open_24"
        app:startIconTint="@color/colorVeryLightGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="25"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:drawableEnd="@drawable/ic_outline_keyboard_arrow_right_24"
        android:drawableTint="@android:color/white"
        android:text="@string/sign_in"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:iconTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        app:rippleColor="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_forgot_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/or"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_forgot_password" />

    <View
        android:id="@+id/space_line_start"
        android:layout_width="40dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorVeryLightGray"
        app:layout_constraintBottom_toBottomOf="@+id/label_or"
        app:layout_constraintEnd_toStartOf="@+id/label_or"
        app:layout_constraintTop_toTopOf="@+id/label_or" />

    <View
        android:id="@+id/space_line_end"
        android:layout_width="40dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorVeryLightGray"
        app:layout_constraintBottom_toBottomOf="@+id/space_line_start"
        app:layout_constraintStart_toEndOf="@+id/label_or"
        app:layout_constraintTop_toTopOf="@+id/space_line_start" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_fb"
        android:layout_width="@dimen/social_icon_square_size"
        android:layout_height="@dimen/social_icon_square_size"
        android:layout_marginTop="@dimen/social_login_icon_margin_top"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/img_fb_56"
        app:layout_constraintStart_toStartOf="@+id/space_line_start"
        app:layout_constraintTop_toBottomOf="@+id/space_line_start" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_google"
        android:layout_width="@dimen/social_icon_square_size"
        android:layout_height="@dimen/social_icon_square_size"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/img_google_56"
        app:layout_constraintEnd_toEndOf="@+id/space_line_end"
        app:layout_constraintTop_toTopOf="@+id/btn_fb" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Powered By:"
        app:layout_constraintBottom_toTopOf="@id/img_logo_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo_code"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/footer_height"
        android:src="@drawable/img_code_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>